--- a/news.html
+++ b/news.html
@@ -172,7 +172,7 @@
             <div class="container">
                 <a class="navbar-brand" href="index.html">
                     <div class="logo-container">
-                        <img src="/assets/logo.png" style="width: 30%;" alt="Esports Arena Logo" class="logo">
+                        <img src="./assets/logo.png" style="width: 30%;" alt="Esports Arena Logo" class="logo">
                     </div>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
