--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <div class="logo-container">
-                        <a href="./index.html"><img src="/assets/logo.png" style="width: 30%;" alt="Esports Arena Logo" class="logo"></a>
+                        <a href="./index.html"><img src="./assets/logo.png" style="width: 30%;" alt="Esports Arena Logo" class="logo"></a>
                         <!-- <span class="date-badge">JUL 20</span> -->
                     </div>
                     </a>
