--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <div class="logo-container">
-                        <a href="./index.html"><img src="/assets/logo.png" style="width: 30%;" alt="Esports Arena Logo" class="logo"></a>
+                        <a href="./index.html"><img src="./assets/logo.png" style="width: 30%;" alt="Esports Arena Logo" class="logo"></a>
                         <!-- <span class="date-badge">JUL 20</span> -->
                     </div>
                     </a>
@@ -66,19 +66,19 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="hero-image-container">
-                    <img src="/assets/carrusel.jpg?height=1200&width=1200" class="d-block w-100" alt="Esports Event">
+                    <img src="./assets/carrusel.jpg?height=1200&width=1200" class="d-block w-100" alt="Esports Event">
                     <div class="flame-overlay"></div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="hero-image-container">
-                    <img src="/assets/GRANULADO.png?height=1200&width=1200" class="d-block w-100" alt="Esports Event">
+                    <img src="./assets/GRANULADO.png?height=1200&width=1200" class="d-block w-100" alt="Esports Event">
                     <div class="flame-overlay"></div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="hero-image-container">
-                    <img src="/assets/convenciones.png?height=1200&width=1200" class="d-block w-100" alt="Esports Event">
+                    <img src="./assets/convenciones.png?height=1200&width=1200" class="d-block w-100" alt="Esports Event">
                     <div class="flame-overlay"></div>
                 </div>
             </div>
